[bumpversion]
current_version = 5.4.0
commit = True
tag = True
tag_name = {new_version}

[metadata]
author = Seth M. Morton
author_email = drtuba78@gmail.com
url = https://github.com/SethMMorton/natsort
description = Simple yet flexible natural sorting in Python.
long_description = file: README.rst
license = MIT
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: System Administrators
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Utilities
	Topic :: Text Processing

[bdist_wheel]
universal = 1

[sdist]
formats = gztar

[bumpversion:file:setup.py]

[bumpversion:file:natsort/__init__.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:docs/source/changelog.rst]
search = XX-XX-XXXX v. X.X.X
replace = {now:%%m-%%d-%%Y} v. {new_version}

[tool:pytest]
flakes-ignore = 
	natsort/compat/py23.py UndefinedName
	natsort/__init__.py UnusedImport
	natsort/compat/* UnusedImport
	docs/source/conf.py ALL
	test_natsort/test_natsort.py UnusedImport RedefinedWhileUnused
	test_natsort/test_locale_help.py UnusedImport RedefinedWhileUnused
	test_natsort/compat/* UnusedImport
pep8ignore = 
	natsort/ns_enum.py E126 E241 E123 E221
	test_natsort/test_*.py E501 E241 E221
	test_natsort/test_natsort_keygen.py E501 E241 E221 E701
	test_natsort/profile_natsorted.py ALL
	docs/source/conf.py ALL
	* W503
pep8maxlinelength = 90

