[bumpversion]
current_version = 7.0.0
commit = True
tag = True
tag_name = {new_version}

[metadata]
author = Seth M. Morton
author_email = drtuba78@gmail.com
url = https://github.com/SethMMorton/natsort
description = Simple yet flexible natural sorting in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: System Administrators
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Utilities
	Topic :: Text Processing

[bumpversion:file:setup.py]

[bumpversion:file:natsort/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
replace = Unreleased
	---
	
	[{new_version}] - {now:%%Y-%%m-%%d}

[flake8]
max-line-length = 89
import-order-style = pycharm
doctests = True
max-complexity = 10
exclude = 
	natsort.egg-info,
	.tox,
	.cache,
	.git,
	__pycache__,
	build,
	dist,
	docs,
	.venv

